# eindex

./: .gitignore  README.md  pyproject.toml  remarks.md
.github/ISSUE_TEMPLATE/: bug_report.md  improvements.md
.github/workflows/: run_tests.yml
eindex/: __init__.py  _core.py  _parsing.py  array_api.py  numpy.py
tests/: test_array_api.py  test_numpy.py  test_operations.py  utils.py
tutorial/: data.py  tutorial.ipynb
verboseindex/: __init__.py  _core.py  _parsing.py  array_api.py  indexing.py  numpy.py
